# weston

./: .gitlab-ci.yml  meson.build  meson_options.txt  weston.ini.in
.gitlab-ci/: build-deps.sh  debian-install.sh  leak-sanitizer.supp
.gitlab-ci/virtme-scripts/: run-weston-tests.sh
clients/: cliptest.c  constraints.c  fullscreen.c  image.c  meson.build  simple-damage.c  simple-dmabuf-egl.c  simple-dmabuf-feedback.c  simple-dmabuf-v4l.c  simple-egl.c  simple-im.c  simple-shm.c  stacking.c  terminal.c  window.c  window.h
desktop-shell/: shell.c  shell.h
doc/scripts/: stream-pipewire.sh
doc/sphinx/: meson.build  run_doxygen_sphinx.sh.in
doc/sphinx/toc/: kiosk-shell.rst
frontend/: android.c  main.c  meson.build  weston-private.h  xwayland.c
fullscreen-shell/: fullscreen-shell.c
include/libweston/: backend-android.h  backend-headless.h  backend-rdp.h  backend-vnc.h  desktop.h  libweston.h  windowed-output-api.h  xwayland-api.h
ivi-shell/: hmi-controller.c  ivi-layout.c  ivi-shell.c
kiosk-shell/: kiosk-shell.c  kiosk-shell.h
libweston/: animation.c  backend.h  color-management.c  color-management.h  color-noop.c  color-profile-param-builder.c  color-properties.c  color-properties.h  color.c  color.h  compositor.c  data-device.c  id-number-allocator.c  id-number-allocator.h  input.c  libweston-internal.h  linux-dmabuf.c  linux-dmabuf.h  log.c  meson.build  noop-renderer.c  pixel-formats.c  pixel-formats.h  pixman-renderer.c  screenshooter.c  timeline.c  vertex-clipping.c  vertex-clipping.h
libweston/backend-android/: android.c
libweston/backend-drm/: drm-gbm.c  drm-internal.h  drm-kms-enums.h  drm-virtual.c  drm.c  fb.c  kms-color.c  kms.c  libbacklight.c  meson.build  modes.c  state-helpers.c  state-propose.c
libweston/backend-headless/: headless.c  meson.build
libweston/backend-pipewire/: meson.build  pipewire.c
libweston/backend-rdp/: meson.build  rdp.c  rdp.h  rdpclip.c  rdpdisp.c
libweston/backend-vnc/: meson.build  vnc.c
libweston/backend-wayland/: meson.build  wayland.c
libweston/backend-x11/: x11.c
libweston/color-lcms/: color-curve-segments.c  color-curve-segments.h  color-lcms.c  color-lcms.h  color-profile.c  color-transform.c  meson.build
libweston/desktop/: client.c  internal.h  libweston-desktop.c  seat.c  surface.c  xdg-shell-v6.c  xdg-shell.c  xwayland.c
libweston/renderer-gl/: fragment.glsl  gl-renderer-internal.h  gl-renderer.c  gl-shader-config-color-transformation.c  gl-shaders.c  meson.build  vertex.glsl
man/: weston-bindings.man  weston-drm.man  weston-rdp.man  weston-vnc.man  weston.ini.man  weston.man
protocol/: meson.build
remoting/: remoting-plugin.c
shared/: cairo-util.c  cairo-util.h  helpers.h  image-loader.c  image-loader.h  meson.build  option-parser.c  os-compatibility.c  weston-assert.h  weston-drm-fourcc.h  weston-egl-ext.h  xalloc.h
tests/: alpha-blending-test.c  assert-test.c  bad-buffer-test.c  buffer-transforms-test.c  color-icc-output-test.c  color-management-test.c  color-metadata-errors-test.c  color-metadata-parsing-test.c  constraints-test.c  devices-test.c  drm-smoke-test.c  drm-writeback-screenshot-test.c  event-test.c  internal-screenshot-test.c  ivi-layout-internal-test.c  ivi-layout-test-plugin.c  keyboard-test.c  kiosk-shell-test.c  lcms_util.c  lcms_util.h  linux-explicit-synchronization-test.c  meson.build  output-damage-test.c  output-transforms-test.c  paint-node-test.c  plugin-registry-test.c  pointer-shot-test.c  pointer-test.c  presentation-test.c  roles-test.c  safe-signal-output-removal-test.c  safe-signal-test.c  single-pixel-buffer-test.c  subsurface-shot-test.c  subsurface-test.c  surface-global-test.c  surface-screenshot-test.c  surface-test.c  text-test.c  touch-test.c  (+13 more)
tools/zunitc/src/: zunitc_impl.c
xwayland/: window-manager.c  xwayland-internal-interface.h
